// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [0, 0, 0] 1`] = `
<div>
  No applicable advisories
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [0, 5, 3] 1`] = `
<div>
  <Tooltip
    content="Bug fixes"
  >
    <span
      className="icon-with-label"
    >
      <BugIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      5
    </span>
  </Tooltip>
  <Tooltip
    content="Security advisories"
  >
    <span
      className="icon-with-label"
    >
      <SecurityIcon
        color="var(--pf-global--warning-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
      3
    </span>
  </Tooltip>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 0, 3] 1`] = `
<div>
  <Tooltip
    content="Enhancements"
  >
    <span
      className="icon-with-label"
    >
      <EnhancementIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      1
    </span>
  </Tooltip>
  <Tooltip
    content="Security advisories"
  >
    <span
      className="icon-with-label"
    >
      <SecurityIcon
        color="var(--pf-global--warning-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
      3
    </span>
  </Tooltip>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 2, 0] 1`] = `
<div>
  <Tooltip
    content="Enhancements"
  >
    <span
      className="icon-with-label"
    >
      <EnhancementIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      1
    </span>
  </Tooltip>
  <Tooltip
    content="Bug fixes"
  >
    <span
      className="icon-with-label"
    >
      <BugIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      2
    </span>
  </Tooltip>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 2, 3] 1`] = `
<div>
  <Tooltip
    content="Enhancements"
  >
    <span
      className="icon-with-label"
    >
      <EnhancementIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      1
    </span>
  </Tooltip>
  <Tooltip
    content="Bug fixes"
  >
    <span
      className="icon-with-label"
    >
      <BugIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      2
    </span>
  </Tooltip>
  <Tooltip
    content="Security advisories"
  >
    <span
      className="icon-with-label"
    >
      <SecurityIcon
        color="var(--pf-global--warning-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
      3
    </span>
  </Tooltip>
</div>
`;
